Email verification feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,13 @@ spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/rest_webservice?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.jpa.hibernate.ddl-auto=update
 
-server.servlet.context-path=/rest-webservice
+#server.servlet.context-path=/rest-webservice
+
+#mail
+spring.mail.username=rest.webservice.app@gmail.com
+spring.mail.password=${MAIL_PASS}
+spring.mail.port=587
+spring.mail.host=smtp.gmail.com
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
